<resources>
    <string name="app_name">SimpleChat</string>

    <string name="action_settings">Settings</string>
    <string name="login_button">Join us</string>
    <string name="login_entry_hint">Enter your login</string>
    <string name="author_name">Oleg Lyovin</string>
    <string name="author_email">olegartys@gmail.com</string>
    <string name="title_activity_chat">ChatActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="button_send">Send</string>
    <string name="input_msg_hint">Enter your message</string>
    <string name="clear_login_button_description">clear_login_entry</string>
</resources>
