<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="@drawable/login_background"
    android:clickable="false">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:id="@+id/linearLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_name"
            android:textColor="#ffffffff"
            android:textSize="12sp"
            android:id="@+id/author_text_view" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/author_email"
            android:textColor="#ffffffff"
            android:textSize="12sp"
            android:id="@+id/autor_email_text_view" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="76dp"
        android:weightSum="3"
        android:layout_alignParentTop="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">

        <TextView
            tools:ignore="MissingPrefix"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/app_name"
            android:id="@+id/head_text_view"
            android:gravity="center"
            android:textColor="#ffffffff"
            android:textSize="50sp"
            android:layout_gravity="center"
            android:layout_weight="1"
            font="fonts/SinkinSans-900XBlack.otf"
            android:layout_marginBottom="120dp" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:weightSum="10"
            android:background="@drawable/login_button">

            <EditText
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:id="@+id/login_entry"
                android:textColor="#ffffffff"
                android:editable="true"
                android:hint="@string/login_entry_hint"
                android:textColorHint="#20f5f5f5"
                android:textAlignment="center"
                android:gravity="center_vertical"
                android:enabled="true"
                android:layout_gravity="center_horizontal"
                android:textCursorDrawable="@drawable/color_cursor"
                android:layout_weight="9"
                android:layout_marginLeft="5dp" />

            <ImageButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/clear_button"
                android:layout_weight="1"
                android:layout_gravity="center"
                android:adjustViewBounds="false"
                android:src="@drawable/abc_ic_clear_mtrl_alpha"
                android:contentDescription="@string/clear_login_button_description" />

        </LinearLayout>

        <Button
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/login_button"
            android:id="@+id/login_button"
            android:layout_marginTop="35dp"
            android:textColor="#ffffffff"
            android:background="@drawable/login_button"
            android:layout_gravity="center"
            android:layout_weight="1"
            style="@style/ButtonStyle"
            android:enabled="true"
            android:elegantTextHeight="false"
            android:clickable="true" />

    </LinearLayout>

</RelativeLayout>
